force-app/main/default/objects/RDS_Box__c/RDS_Box__c.object-meta.xml
<CustomObject>
    <label>RDS Box</label>
    <nameField>
        <label>RDS Box Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RDS Boxs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>