force-app/main/default/objects/RDS_Box__c/fields/Box_Key__c.field-meta.xml
<CustomField>
    <fullName>Box_Key__c</fullName>
    <externalId>true</externalId>
    <label>Box Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>