force-app/main/default/objects/RDS_Box__c/fields/No_Box__c.field-meta.xml
<CustomField>
    <fullName>No_Box__c</fullName>
    <label>No Box</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>