force-app/main/default/objects/RDS_Box__c/fields/Policy_No__c.field-meta.xml
<CustomField>
    <fullName>Policy_No__c</fullName>
    <label>Policy No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>