force-app/main/default/objects/RDS_Box__c/fields/Queue_No__c.field-meta.xml
<CustomField>
    <fullName>Queue_No__c</fullName>
    <label>Queue No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>